# downloadmaster

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_client.rs  config.rs  db.rs  hasher.rs  lib.rs  scanner.rs  sorter.rs  watcher.rs
src-tauri/src/commands/: mod.rs
src/components/: FileTable.tsx  MetricCard.tsx  RuleEditor.tsx  Sidebar.tsx  SortPreview.tsx  TagBadge.tsx
src/hooks/: useTauri.ts
src/store/: useAppStore.ts
src/types/: index.ts
src/views/: CleanupView.tsx  DashboardView.tsx  FilesView.tsx  HistoryView.tsx  PlaceholderView.tsx  RulesView.tsx  SettingsView.tsx
